# emobot

./: CMakeLists.txt  README.md  ledOnOff.py  serialout.cpp
MyKeepon/: KeeponEmotions.txt  KeeponSounds.txt  KeeponTests.py  MyKeepon.ino
Twitter/: tweetbot.py
core_prog/: Keepon.cpp  KeeponControl.py  Makefile  Makefile.txt  main.cpp  main_b.cpp  make.txt
core_prog/emobot/: emobot.sln
core_prog/emobot/core_prog/: Keepon.cpp  core_prog.vcxproj  core_prog.vcxproj.filters  main.cpp
libfacerec0.04/: CMakeCache.txt  Makefile  cmake_install.cmake  fisherfaces
